# agent_voice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  scratch.md
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  container.yml
accounting/: models.json
config/: agent_voice.example.yaml  agent_voice.yaml
deploy/: agent-voice.env.example  agent-voice.service  docker-entrypoint.sh
docs/: address-book.md  configuration.md  control-api.md  deployment.md  overview.md  release.md  testing.md
python/: sherpa_onnx_bridge.py
src/: accounting.rs  api.rs  audio.rs  config.rs  lib.rs  llm.rs  main.rs  openai.rs  phonebook.rs  service.rs  sherpa_onnx.rs  speech.rs  stt.rs  tts.rs  voice.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/src/css/: custom.css
website/src/pages/: index.js
