[package]
name = "agent_voice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
futures-util = "0.3"
hound = "3.5"
http = "1.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.23", features = ["serde", "v4"] }
xphone = "0.4.0"
